syntax = "proto3";

package main;


option go_package = "./";

service UserApi {
    // rpc Heartbeat(BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse){};
    rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
   
    // rpc GetUser(UserRequest) returns (UserResponse) {}

}

message DeleteUserRequest{
    string id = 1;
}

message CreateUserRequest{
    string first_name = 1;
    string last_name = 2;
    string nick_name = 3;
    string password = 4;
    string email = 5;
    string country = 6;
}


message UpdateUserRequest{
    string id =1;
    CreateUserRequest update = 2;


}

message UserResponse{
    int32 return_code = 1;
}

